<resources>
    <string name="app_name">Buddy</string>
    <string name="buttonRegister">Create Account</string>
    <string name="buttonLogin">LogIn</string>
    <string name="buttonGoogleLogin">Google LogIn</string>
    <string name="buttonFaceBookLogin">FaceBook LogIn</string>
    <string name="textViewRegister">Register</string>
    <string name="editTextEmailHint">E-Mail</string>
    <string name="editTextPasswordHint">Password</string>
    <string name="textViewProfile">Profile</string>
    <string name="textViewAlreadyUser">Already have an account? Login</string>
    <string name="textViewLogin">LogIn</string>
    <string name="textViewUnderLogo">Find a Buddy!</string>
    <string name="textViewReigsterNow">You don\`t have an account? Sing up now!</string>
    <string name="textViewForgotPass">Forgot your Password? Recover it now!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>