<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- ImageView: Backround -->
    <ImageView
        android:id="@+id/backgroudImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_background"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop">

    </ImageView>

    <!-- ImageView: Logo -->
    <ImageView
        android:id="@+id/LogoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/buddylogo" />

    <!-- TextView: Find A Buddy! -->
    <TextView
        android:id="@+id/findABuddy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogoMain"
        android:fontFamily="@font/alata"
        android:text="@string/textViewUnderLogo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <!-- Button: Main Login -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:fontFamily="@font/alata"
        android:text="@string/buttonLogin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_below="@+id/findABuddy"
        android:textSize="26sp"
        android:paddingLeft="50dp"
        android:paddingRight="60dp"/>

    <!-- View: Space -->
    <View
        android:id="@+id/viewSpace"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="70dp"
        android:background="#707070"
        android:layout_below="@+id/buttonLogin"/>

    <!-- Button: Google LogIn -->
    <Button
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonGoogleLogin"
        android:backgroundTint="#bcbcbc"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/google"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/viewSpace"
        android:layout_centerHorizontal="true"
        android:textColor="#636363"/>

    <!-- TextView: Register -->
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLoginGoogle"
        android:text="@string/textViewReigsterNow"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#04336a" />




</RelativeLayout>