<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/backround_intro">

    <!-- TextView: Label Login -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewLogin"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <!-- EditText: Input Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextEmailHint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.102" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText: Input Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"

        android:padding="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextPasswordHint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="0.05" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button: Register Button -->
    <Button
        android:id="@+id/buttonLoginSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        android:layout_below="@+id/textInputLayout2" />

    <!-- TextView: Click to go to registerActivity -->
    <TextView
        android:id="@+id/textViewNotUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewNotAUser"
        android:textAlignment="center"
        android:layout_below="@+id/buttonLoginSec" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:src="@drawable/bottom_background"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop" />
</RelativeLayout>